# mcp_local_repo_analyzer

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  debug_mcp_types.py  fastmcp_http_server.py  local_repo_analyzer_streamable_http.py  pyproject.toml  simple_echo_server.py  simple_test.py  sse_debug_tool.py  test_simple.py
.github/workflows/: ci.yml  docker-ci.yml  lint.yml  release.yml
local_git_analyzer/: main.py
local_git_analyzer/models/: __init__.py  analysis.py  changes.py
local_git_analyzer/services/: __init__.py  change_detector.py  diff_analyzer.py  git_client.py  status_tracker.py
local_git_analyzer/tools/: staging_area.py  summary.py  unpushed_commits.py  working_directory.py
src/local_git_analyzer/: main.py
src/local_git_analyzer/services/git/: __init__.py  change_detector.py
src/local_git_analyzer/tools/: staging_area.py  unpushed_commits.py  working_directory.py
src/mcp_local_repo_analyzer/: cli.py  main.py  run_http_server.py
src/mcp_local_repo_analyzer/services/git/: change_detector.py  diff_analyzer.py  status_tracker.py
src/mcp_local_repo_analyzer/tools/: staging_area.py  summary.py  unpushed_commits.py  working_directory.py
tests/: __init__.py  conftest.py  test_manual.py
tests/integration/: test_chain.py  test_client.py  test_client.py.bak  test_git_line_count.py  test_http_server.py  test_http_server.py.bak  test_in_memory.py  test_in_memory.py.bak  test_mcp_inspector.py  test_quick.py  test_quick.py.bak
tests/unit/: __init__.py  test_cli.py  test_example.py  test_example.py.bak  test_run_http_server.py  test_services.py  test_services.py.bak
tests/unit/config/: test_manual.py  test_manual.py.bak
tests/unit/services/: test_change_detector.py  test_diff_analyzer.py  test_status_tracker.py
tests/unit/tools/: test_staging_area.py  test_summary.py  test_unpushed_commits.py  test_working_directory.py
